--- a/Group2/student_management_system/templates/details.html
+++ b/Group2/student_management_system/templates/details.html
@@ -31,30 +31,31 @@
         </div>
       </div>
     </nav>
-    <div class="container-fluid">
-      {% block body %}
-      <h1>{{ student }}</h1>
-      <table>
-        <thead>
-          <tr>
-            <th><h3>Module Name</h3></th>
-            <th><h3 style="margin-left: 120px;">Grade</h3></th>
-          </tr>
-        </thead>
-      {% for student in grades %}
-        <tbody>
-          <tr>
-            <td>
-              <h5 style="display: inline;">{{ student.module_name }} </h5>
-            </td>
-            <td style="margin-left: 200px;">
-              {{student.grade}}
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      {% endfor %}
-      {% endblock %}
+    <div class="card-body">
+      <p class="card-text">
+        <div class="table-responsive">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Student Number</th>
+                <th scope="col">Student Name</th>
+                <th scope="col">Module</th>
+                <th scope="col">Grade</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for std in grades %}
+                <tr>
+                  <td>{{ student.student_number }}</td>
+                  <td>{{ student.first_name }}</td>
+                  <td>{{ std.module_name }}</td>
+                  <td>{{ std.grade }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+          </table>
+        </div>
+      </p>
     </div>
     <footer class="mt-auto mb-4">
       <div class="text-center">
@@ -66,3 +67,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+<!-- HERE ADNOBONVO -->
