add Teacher model

--- a/Group2/student_management_system/templates/details.html
+++ b/Group2/student_management_system/templates/details.html
@@ -55,6 +55,9 @@
             </tbody>
           </table>
         </div>
+        <a href="{% url 'index' %}" class="btn btn-primary" style="margin-left: 1300px;">
+          Back
+        </a>
       </p>
     </div>
     <footer class="mt-auto mb-4">
