--- a/Group2/student_management_system/templates/base.html
+++ b/Group2/student_management_system/templates/base.html
@@ -27,9 +27,15 @@
                 <i class="fa-solid fa-plus fa-lg"></i> Add Student
               </a>
             </li>
+            
     
           </ul>
         </div>
+        <li class="nav-item" style="margin-left: 700px;">
+          <a class="nav-link" href="{% url 'logout' %}">
+            <i class="btn btn-danger">Logout</i> 
+          </a>
+        </li>
       </div>
     </nav>
     <div class="container-fluid">
